Added test frameworks
I decided to use GTest for the testing framework. This will hopefully make debugging easier
The trickiest part is to configure CMake correctly.

Thanks to the help from:
https://www.eriksmistad.no/getting-started-with-google-test-on-ubuntu/
https://github.com/google/googletest/blob/master/googletest/docs/primer.md
http://notes.eatonphil.com/unit-testing-c-code-with-gtest.html

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -19,3 +19,5 @@ add_custom_target(run
 	COMMAND chip8 ${ROMS_DIR}/IBM.ch8
 	# COMMAND chip8 ${ROMS_DIR}/Maze.ch8
 	)
+
+add_library(chip8_lib STATIC ${CHIP8_SOURCES})
